--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><img class="apple-logo" src="images/apple-logo.png"
+                <a class="navbar-brand" href="index.html"><img class="apple-logo" src="images/apple-logo.png"
                         alt="apple-logo"></a>
                 <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="iphone.html">iPhone</a>
